tests/loops/valid/while_single_statement.amu
main :: () -> s32 {
    a:s32 = 0;

    while (a < 5)
        a = a + 2;

    return a;
}