tests/loops/invalid/syntax_err_statement_in_condition.amu
main :: () -> s32 {
    while(s32 a) {
        2;
    }
}